--- a/src/index.html
+++ b/src/index.html
@@ -240,15 +240,19 @@
 
       <section class="about divider" id="about-section">
         <div class="container container--p26">
-          <div class=" about-inner">
-            <p class="about__text about__text--small">Игровая Биржа с выводом реальных денег прямо на счет личного
-              Qiwi/Webmoney
-            </p>
-            <p class="about__text about__text--small">PTS сборка с собственными наработками, такими как GM Shop, Alt+B
-              buff,
-              Aвтолут\АЦП</p>
-            <p class="about__text about__text--small">На проект были приглашены лучшие специалисты из всех известных в
-              сфере L2</p>
+          <div class="about-inner flex">
+            <ol class="about__small-wrapper">
+              <li class="about__text about__text--small">Игровая Биржа с выводом реальных денег прямо на счет личного
+                Qiwi/Webmoney
+              </li>
+              <li class="about__text about__text--small">PTS сборка с собственными наработками, такими как GM Shop,
+                Alt+B
+                buff,
+                Aвтолут\АЦП</li>
+              <li class="about__text about__text--small">На проект были приглашены лучшие специалисты из всех известных
+                в
+                сфере L2</li>
+            </ol>
             <div class="about__text about__text--big flex">
               <p class="about__descr">
                 Больше никаких авантюр, мы берем под контроль весь процесc
@@ -259,7 +263,7 @@
                 <li class="about__list-item">Qiwi Wallet</li>
                 <li class="about__list-item">Webmoney Wallet</li>
               </ul>
-              <img src="images/2.gif" alt="Игровой процесс Lineage-2" class="about__image">
+              <img src="images/image-2.jpg" alt="Игровой процесс Lineage-2" class="about__image">
             </div>
           </div>
         </div>
